@@ -9,6 +9,9 @@ From v1.0.0 and on, the project will adherence strictly to Semantic Versioning.
 
 ## [Unreleased]
 
+### Added
+- SPLoPA prototype rank control
+
 ### Changed
 - Switch to batch-wise Kronecker product implementation
 
